# lauer_cinema

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/config/: development.yaml
backend/src/: app.rs
backend/src/controllers/: detail.rs  mod.rs  search.rs
backend/tests/requests/: detail.rs  mod.rs  search.rs
frontend/: Dockerfile  vite.config.ts
frontend/src/lib/components/: Detail.svelte  Search.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/detail/movie/[id]/: +page.svelte  +page.ts
frontend/src/routes/detail/tv/[id]/: +page.svelte  +page.ts
frontend/src/routes/movies/: +page.svelte
frontend/src/routes/tv/: +page.svelte
